# DILIGENT-Clinical-Copilot

./: .gitignore  .tmp_case_data.json  .tmp_case_payloads.json  LICENSE  README.md  agents.md  docker-compose.yml  pyproject.toml  qa_dili_evaluation_evidence.txt  qa_dili_evaluation_report.md  setup_and_maintenance.bat  start_on_windows.bat  tmp_all3_with_reports.json  tmp_dili_5run_results.json  tmp_dili_5run_table.md  tmp_dili_extraction_full.md  tmp_dili_live_run.json  tmp_dili_live_run_with_reports.json  tmp_doc2_live.json  tmp_gpt54_all3.json  tmp_pipeline_reliability_inprocess.json  tmp_reliability_5jobs.json
app/server/: __init__.py  app.py  pyproject.toml  tmp_5docs_api_verification.json  tmp_5docs_api_verification_after_provider_fix.json  tmp_5docs_preflight_after_fixes.json  tmp_dili_results.json  tmp_dili_results_v2.json  tmp_pipeline_reliability_inprocess_after_fix.json
app/server/api/: access_keys.py  data_inspection.py  error_handling.py  health.py  model_config.py  ollama.py  research.py  session.py
app/server/common/: constants.py  exceptions.py
app/server/common/utils/: catalog_loader.py  error_filters.py  languages.py  logger.py  patterns.py  types.py
app/server/configurations/: __init__.py  environment.py  llm_configs.py  management.py  model_runtime.py  startup.py
app/server/domain/: catalogs.py  errors.py  health.py  inspection.py  jobs.py  keys.py  model_configs.py  models.py  patient_timeline.py  rxnav.py  text.py
app/server/domain/clinical/: __init__.py  entities.py  extraction.py  extras.py  pipeline_models.py  robustness.py  rucam.py  sections.py  validation.py
app/server/domain/research/: __init__.py  extras.py
app/server/domain/settings/: __init__.py  configuration.py  runtime.py
app/server/repositories/: __init__.py  vectors.py
app/server/repositories/database/: initializer.py  postgres.py  session.py  sqlite.py  utils.py
app/server/repositories/queries/: __init__.py  access_keys.py  drugs.py  model_config.py
app/server/repositories/schemas/: __init__.py  models.py
app/server/repositories/serialization/: __init__.py  access_key_encryption.py  access_keys.py  catalogs.py  data.py  evidence_aliases.py  evidence_data.py  fda_data.py  model_configs.py  session_result_data.py  text_normalization.py  vectors.py
app/server/scripts/: check_backend_constraints.py
app/server/services/: async_batches.py  cryptography.py  jobs.py
app/server/services/catalogs/: manifest_loader.py  runtime.py  seeder.py
app/server/services/clinical/: candidate_selection.py  deterministic_extraction.py  disease.py  drug_blocks.py  hepatox.py  hepatox_assessment.py  hepatox_core.py  hepatox_prompts.py  hepatox_scoring.py  hepatox_timeline.py  job_progress.py  knowledge.py  labs.py  language.py  livertox.py  match_resolution.py  matches.py  matches_causality.py  matches_core.py  matches_drug.py  matches_serialization.py  parser.py  parser_extraction.py  parser_prompting.py  parser_validation.py  preparation.py  report_language.py  rucam.py  template.py  timeline.py  validation.py
app/server/services/inspection/: __init__.py  normalization.py  revision_helpers.py  service.py  timeline.py  update_jobs.py
app/server/services/llm/: client_runtime.py  cloud.py  model_config.py  ollama.py  ollama_chat.py  ollama_client.py  ollama_residency.py  ollama_structured.py  prompts.py  provider_factory.py  providers.py  structured.py
app/server/services/research/: brave.py
app/server/services/retrieval/: chunking.py  embedding_model.py  embeddings.py  query.py  seed_terms.py
app/server/services/runtime/: async_batches.py  jobs.py  state.py
app/server/services/security/: access_keys.py  cryptography.py
app/server/services/session/: __init__.py  clinical_input_extractor.py  clinical_section_parsers.py  document_normalizer.py  factory.py  (+10 more)
(+808 files in other folders)
