[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "DILIGENT"
version = "2.1"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "tqdm==4.67.1",
    "SQLAlchemy==2.0.43",
    "httpx==0.27.2",    
    "rapidfuzz==3.9.4",   
    "pdfminer.six==20250506",
    "pypdf==6.1.1",    
    "langchain==1.2.0",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.0",
    "lancedb==0.26.0",
    "openpyxl==3.1.5",    
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["DILIGENT"]




