[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "DILIGENT"
version = "2.1"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pandas==3.0.0",
    "tqdm==4.67.1",
    "SQLAlchemy==2.0.46",
    "psycopg[binary]==3.3.1",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
    "cryptography==46.0.3",
    "pdfminer.six==20250506",
    "pypdf==6.1.1",    
    "langchain-core==1.3.1",
    "langchain-openai==1.1.13",
    "langchain-google-genai==3.2.0",
    "langchain-ollama==1.1.0",
    "openai==2.32.0",
    "google-genai==1.53.0",
    "lancedb==0.26.0",
    "openpyxl==3.1.5",    
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.5.0",
    "psutil>=6.1.1",
    "ruff==0.15.9"
]

[tool.hatch.build.targets.wheel]
packages = ["DILIGENT"]




