[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "DILIGENT"
version = "2.1"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "anyio==4.9.0",
    "pandas==3.0.3",
    "tqdm==4.67.3",
    "SQLAlchemy==2.0.50",
    "psycopg[binary]==3.3.4",
    "httpx==0.28.1",
    "trio>=0.30.0",
    "python-dotenv==1.2.2",
    "cryptography==46.0.3",
    "pdfminer.six==20250506",
    "pypdf==6.12.2",    
    "langchain-core==1.3.1",
    "langchain-openai==1.1.13",
    "langchain-google-genai==3.2.0",
    "langchain-ollama==1.1.0",
    "openai==2.38.0",
    "google-genai==1.53.0",
    "lancedb==0.30.2",
    "torch>=2.12.0",
    "transformers>=5.8.0",
    "openpyxl==3.1.5",    
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.2",
    "pyright>=1.1.407",
    "playwright>=1.55.0",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "app.py",
    "api",
    "common",
    "configurations",
    "domain",
    "models",
    "repositories",
    "services",
]

[tool.ruff]
exclude = [
    "app/client/src-tauri/target",
    "**/__pycache__",
]

[tool.pytest.ini_options]
testpaths = ["../tests/unit"]
pythonpath = ["."]





